feature: integración de listado de pokemons y detalle de pokemon con javascript

--- a/index.html
+++ b/index.html
@@ -4,8 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Examen BBVA</title>
+    <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/app.css">
 </head>
 <body>
-    
+    <div class="header">
+        <h1>
+            La Pokedex Xanxa!
+        </h1>
+    </div>
+    <div class="container">
+        <div class="list-pokemons" >
+            <h1>Listado de Pokemones</h1>
+            <div id="poke_container">
+
+            </div>
+        </div>
+        <div class="detail-pokemons">
+            <h1>Detalle de Pokemon</h1>
+            <div id="poke_detail">
+
+            </div>
+        </div>
+    </div>
+
+    <script src="./js/main.js"></script>
 </body>
 </html>
